Text overflow fix and user select

--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -13,18 +13,21 @@
   color: white;
   text-align: right;
   padding: 2px 30px 0 0;
+  overflow: hidden;
 }
 
 .btn {
   background-color: #F2F2F2;
   border: 1px solid #999;
   padding: 20px;
+  user-select: none; 
 }
 
 .btnOperator {
   background-color: orange;
   color: white;
   padding: 20px;
+  user-select: none; 
 }
 
 .btnZero {
@@ -32,6 +35,7 @@
   background-color: #F2F2F2;
   border: 1px solid #999;
   grid-column: 1 / 4;
+  user-select: none; 
 }
 
 .formula {
